Add user update endpoint
