# server/swagger.yaml
@@ -123,6 +123,25 @@ paths:
                 $ref: '#/components/schemas/User'
         '404':
           $ref: '#/components/responses/404'
+    put:
+      tags:
+        - Users
+      summary: Edit a user by username
+      parameters:
+        - $ref: '#/components/parameters/path_username'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: User info updated successfully
+        '401':
+          $ref: '#/components/responses/401'
+        '404':
+          $ref: '#/components/responses/404'
     delete:
       tags:
         - Users
